@@ -1,3 +1,8 @@
+2012-12-22  Morphe  <Morphe@Morphe-PC>
+
+	* src\GeneralControls\XEditorWindow.h (XEditorWindow): Added removeText method
+	Added prototypes for undo and redo
+
 2012-12-17  Morphe  <Morphe@Morphe-PC>
 
 	* src\Window\platform.h: Added WM_MOUSEHWHEEL, since it is OS-version specific
